# agent-assure

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  evidence.yml  publish-testpypi.yml  release.yml
compat/: otel_mapping_matrix.yaml
docs/: api_surface.md  architecture.md  claim_boundary.md  claims_traceability_matrix.md  claims_traceability_matrix.yaml  cli_contract.md  demo_expense.md  demo_flagship.md  demo_rag.md  dependency_locking.md  digest_field_inventory.md  documentation_alignment.md  evidence_diff.md  evidence_packets.md  expectation_authoring.md  fixture_mode.md  for_ai_leaders.md  for_engineers.md  governance_crosswalk_iso42001.md  governance_crosswalk_mitre_atlas.md  governance_crosswalk_nist_ai_rmf.md  governance_crosswalk_owasp_llm.md  index.md  invariant_diffing.md  limitations.md  live_calibration.md  live_mode_roadmap.md  motivation.md  multi_llm_integration.md  otel_alignment.md  privacy_model.md  provenance_and_hashing.md  reason_code_registry.md  release_evidence.md  release_pypi.md  schema_evolution.md  schema_reference.md  showcase.md  threat_coverage_matrix.yaml  threat_model.md  (+1 more)
docs/adapters/: adapter_contract.md
docs/adr/: 0001-new-repository.md  0002-expectations-over-baseline.md  0003-fixture-vs-live-mode.md  0004-hashes-are-provenance.md  0005-otel-projection-not-duplication.md  0006-canonicalization-profile.md  0007-yaml-authoring-json-artifacts.md  0008-materiality-is-fixture-declared.md  0009-rag-provenance-example-shape.md
docs/assets/: flagship_demo_transcript.txt
docs/integrations/: google_adk.md  langgraph.md
docs/measurement/: blind_review_release_evidence.md  executive_one_pager.md  experiment_protocol.md  measurement_brief_abstract.md  measurement_questions.md  nist_agentic_measurement_use_case.md  process_assurance_vs_answer_quality_eval.md
docs/posts/: output_equivalence_is_not_process_equivalence.md
docs/release_notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.5.0.md
docs/social/: demo_video_script.md
docs/standards/: freshness_checklist.md  otel_contribution_candidate.md  otel_genai_gap_analysis.md  upstream_issue_inventory.md
examples/adk_process_assurance/: README.md  run_example.py  suite.yaml
examples/expense_approval_minimal/: README.md  suite.yaml
examples/langgraph_expense_assurance/: run_example.py  suite.yaml
examples/prior_auth_synthetic/: README.md  rag_suite.yaml  runner.py  suite.yaml
examples/process_measurement_cases/: README.md  suite.yaml
examples/usage/: langgraph-expense-demo-pricing-v1.json  local-demo-pricing-v1.json
mappings/: iso_iec_42001.yaml  mitre_atlas_2026_06.yaml  nist_ai_rmf.yaml  owasp_llm_top_10_2025.yaml
paper/: invariant_based_change_control.md  invariant_based_change_control_abstract.md  reproducibility_appendix.md
schemas/v0.1.0/: agent-run-record.schema.json  comparison-report.schema.json  comparison-summary.schema.json  compiled-suite.schema.json  environment-info.schema.json  evaluation-report.schema.json  evaluation-summary.schema.json  evidence-packet.schema.json  expectation-change-record.schema.json  expectation.schema.json  fixture-manifest.schema.json  live-comparison-report.schema.json  live-evaluation-report.schema.json  live-protocol-record.schema.json  release-artifact-manifest.schema.json  release-digest-replay.schema.json  run-set.schema.json  span-plan.schema.json
schemas/v0.2.0/: environment-info.schema.json  expectation.schema.json  fixture-manifest.schema.json  live-comparison-report.schema.json  live-evaluation-report.schema.json  live-protocol-record.schema.json  release-artifact-manifest.schema.json  span-plan.schema.json
schemas/v0.3.0/: agent-run-record.schema.json  comparison-report.schema.json  comparison-summary.schema.json  compiled-suite.schema.json  emergency-process-record.schema.json  evaluation-report.schema.json  evaluation-summary.schema.json  evidence-packet.schema.json  expectation-change-record.schema.json  live-drift-report.schema.json  live-protocol-record.schema.json  live-trajectory-report.schema.json  release-digest-replay.schema.json  run-set.schema.json
schemas/v0.3.1/: agent-run-record.schema.json  comparison-report.schema.json  comparison-summary.schema.json  compiled-suite.schema.json  emergency-process-record.schema.json  environment-info.schema.json  evaluation-report.schema.json  evaluation-summary.schema.json  evidence-packet.schema.json  expectation-change-record.schema.json  expectation.schema.json  fixture-manifest.schema.json  live-comparison-report.schema.json  live-drift-report.schema.json  live-evaluation-report.schema.json  live-protocol-record.schema.json  live-trajectory-report.schema.json  release-artifact-manifest.schema.json  release-digest-replay.schema.json  run-set.schema.json  span-plan.schema.json  usage-ledger.schema.json  usage-segment.schema.json  usage-summary-delta.schema.json  usage-summary.schema.json
schemas/v0.4.3/: agent-run-record.schema.json  comparison-report.schema.json  comparison-summary.schema.json  compiled-suite.schema.json  control-coverage-report.schema.json  emergency-process-record.schema.json  environment-info.schema.json  evaluation-report.schema.json  evaluation-summary.schema.json  evidence-packet.schema.json  expectation-change-record.schema.json  (+16 more)
scripts/: __init__.py  assert_dist_reproducible.py  build_release_bundle.py  check_claim_boundaries.py  check_docs_alignment.py  check_frozen_schemas.py  check_packaged_examples.py  check_schema_staging.py  check_tagged_schema_immutability.py  check_version_matches_tag.py  check_wheel_contents.py  clean_dist.py  cosign_release_artifacts.py  record_demo_transcript.ps1  record_demo_transcript.sh  reproduce_release.py  run_source_cli.py  schema_target.py  schema_versions.py  smoke_install_wheel.py  sync_schema_force_includes.py  update_golden.py
(+405 files in other folders)
