[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-assure"
version = "0.3.0"
description = "Local-first process assurance for agentic AI pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ACB Labs" }]
keywords = [
  "agentic-ai",
  "ai-governance",
  "ai-assurance",
  "llmops",
  "responsible-ai",
  "opentelemetry",
  "mlops",
  "ci-cd",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.12,<3",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "PyYAML>=6,<7",
  "rfc8785==0.1.4",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
otel = [
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-socket>=0.7",
  "hypothesis>=6",
  "ruff",
  "mypy",
  "build",
  "hatchling>=1.27",
  "twine>=5",
  "mkdocs>=1.6,<2",
]

[project.urls]
Homepage = "https://github.com/acblabs/agent-assure"
Repository = "https://github.com/acblabs/agent-assure"
Issues = "https://github.com/acblabs/agent-assure/issues"
Documentation = "https://github.com/acblabs/agent-assure#readme"
Changelog = "https://github.com/acblabs/agent-assure/releases"

[project.scripts]
agent-assure = "agent_assure.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_assure"]
exclude = [
  ".tmp/**/*",
  "dist/**/*",
  "build/**/*",
  ".pytest_cache/**/*",
  ".mypy_cache/**/*",
  ".ruff_cache/**/*",
  "**/__pycache__/**/*",
  "**/*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"schemas/v0.1.0" = "agent_assure/schema_resources/v0.1.0"
"schemas/v0.2.0" = "agent_assure/schema_resources/v0.2.0"
"schemas/v0.3.0" = "agent_assure/schema_resources/v0.3.0"

[tool.hatch.build.targets.sdist]
include = [
  "src/agent_assure/**/*",
  "schemas/**/*",
  "examples/**/*",
  "docs/**/*",
  "tests/**/*",
  "scripts/**/*",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "Makefile",
]
exclude = [
  ".tmp/**/*",
  "dist/**/*",
  "build/**/*",
  ".pytest_cache/**/*",
  ".mypy_cache/**/*",
  ".ruff_cache/**/*",
  "**/__pycache__/**/*",
  "**/*.pyc",
]

[tool.pytest.ini_options]
addopts = "-q --disable-socket"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "jsonschema",
  "jsonschema.*",
  "opentelemetry",
  "opentelemetry.*",
  "rfc8785",
  "yaml",
]
ignore_missing_imports = true
